<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/marginMedium"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSelect"
        android:textSize="@dimen/textSizeLarge"
        />
    <CheckBox
        android:id="@+id/checkStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkStart"
        android:textSize="@dimen/textSizeMedium"
        />
    <LinearLayout
        android:id="@+id/linearSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioDog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioDog"
            android:textSize="@dimen/textSizeMedium"/>
        <RadioButton
            android:id="@+id/radioTiger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioTiger"
            android:textSize="@dimen/textSizeMedium"/>
        <RadioButton
            android:id="@+id/radioPuma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioPuma"
            android:textSize="@dimen/textSizeMedium"/>
        </RadioGroup>
        <Button
            android:id="@+id/btndone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDone"/>
        <ImageView
            android:id="@+id/imgV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/dog"
            android:scaleType="fitXY"/>
    </LinearLayout>

</LinearLayout>